# src/models/product.model.ts
@@ -1,5 +1,7 @@
 import { Schema, model } from "mongoose";
 import { IProduct, IElectronic, IClothing } from "types";
+import slugify from "slugify";
+import { NextFunction } from "express";
 
 const DOCUMENT_NAME = "Product";
 const COLLECTION_NAME = "Products";
@@ -27,22 +29,46 @@ const productSchema = new Schema<IProduct<IElectronic | IClothing>>(
     product_type: {
       type: String,
       required: true,
-      enum: ["Electronics", "Clothing", "Furniture"],
+      enum: ["Electronic", "Clothing", "Furniture"],
     },
     product_attibutes: {
       type: Schema.Types.Mixed,
       required: true,
     },
-    shopId: {
+    product_shop: {
       type: Schema.Types.ObjectId,
       required: true,
       ref: "Shop",
+    },
+    product_slug: String,
+    product_ratings_average: {
+      type: Number,
+      default: 4.5,
+      min: [1, "Rating must be above 1.0"],
+      max: [5, "Rating must be above 5.0"],
+      set: (value) => Math.round(value * 10) / 10,
+    },
+    product_variations: {
+      type: [{ type: String }],
+      default: [],
+    },
+    is_draft: {
+      type: Boolean,
+      default: true,
+      index: true,
+      select: false,
+    },
+    is_published: {
+      type: Boolean,
+      default: false,
+      index: true,
+      select: false,
     },
   },
   {
     timestamps: true,
     collection: COLLECTION_NAME,
-  }
+  },
 );
 
 const clothingSchema = new Schema<IClothing>(
@@ -53,12 +79,29 @@ const clothingSchema = new Schema<IClothing>(
     },
     size: String,
     material: String,
+    product_shop: {
+      type: Schema.Types.ObjectId,
+      required: true,
+      ref: "Shop",
+    },
   },
   {
     timestamps: true,
-    collection: "clothes",
-  }
+    collection: "Clothes",
+  },
 );
+
+// create index for search
+productSchema.index({
+  product_name: "text",
+  product_description: "text",
+});
+// Document middleware: run before save data
+
+productSchema.pre("save", function (next: NextFunction) {
+  this.product_slug = slugify(this.product_name, { lower: true });
+  next();
+});
 
 const electronicSchema = new Schema<IElectronic>(
   {
@@ -68,11 +111,16 @@ const electronicSchema = new Schema<IElectronic>(
     },
     model: String,
     color: String,
+    product_shop: {
+      type: Schema.Types.ObjectId,
+      required: true,
+      ref: "Shop",
+    },
   },
   {
     timestamps: true,
-    collection: "electronics",
-  }
+    collection: "Electronics",
+  },
 );
 
 // const furnitureSchema = new Schema<any>(
