# src/openapi/paths/product.yaml
@@ -1,196 +1,164 @@
-# tags:
-#   - name: Product
-#     description: Product managament
-# paths:
-#   /v1/product/list:
-#     get:
-#       summary: Get Products information
-#       description: Logged in users can fetch only their own user information.
-#       tags: [Product]
-#       security:
-#         - bearerAuth: []
-#       parameters:
-#         - in: query
-#           name: page
-#           schema:
-#             type: number
-#           example: 1
-#           required: false
-#         - in: query
-#           name: limit
-#           schema:
-#             type: number
-#           required: false
-#           example: 25
-#       responses:
-#         "200":
-#           description: OK
-#         "400":
-#           description: Bad Request
+tags:
+  - name: Product
+    description: Product managament
+paths:
+  /product/create:
+    post:
+      summary: Create an Product
+      description: Logged in users can create an Product.
+      tags: [Product]
+      security:
+        - bearerAuth: []
+        - clientId: []
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - product_name
+                - product_thumb
+                - product_description
+                - product_price
+                - product_quantity
+                - product_type
+                - shopId
+                - product_attibutes
+              properties:
+                product_name:
+                  type: string
+                product_thumb:
+                  type: string
+                product_description:
+                  type: string
+                product_quantity:
+                  type: number
+                product_type:
+                  type: string
+                shopId:
+                  type: string
+                product_attibutes:
+                  type: object
+                product_price:
+                  type: number
+              example:
+                product_name: New jean
+                product_thumb: product_thumb
+                product_description: Adidas
+                product_price: 2000
+                product_quantity: 200
+                product_type: Clothing
+                product_attibutes: { brand: Adidas, size: L, material: Denim }
+      responses:
+        "201":
+          description: Created
+        "400":
+          description: Bad Request
 
-#   /v1/product/create:
-#     post:
-#       summary: Create an Product
-#       description: Logged in users can create an Product.
-#       tags: [Product]
-#       security:
-#         - bearerAuth: []
-#       requestBody:
-#         content:
-#           application/json:
-#             schema:
-#               type: object
-#               required:
-#                 - jancode
-#                 - jp_name
-#                 - price
-#               properties:
-#                 jancode:
-#                   type: string
-#                 jp_name:
-#                   type: string
-#                 en_name:
-#                   type: string
-#                 vn_name:
-#                   type: string
-#                 jp_description:
-#                   type: string
-#                 en_description:
-#                   type: string
-#                 vn_description:
-#                   type: string
-#                 country_code:
-#                     type: string
-#                 image_url:
-#                   type: string
-#                 link:
-#                   type: string
-#                 product_ :
-#                   type: string
-#                 price:
-#                   type: number
-#               example:
-#                 jancode:  B0B4SFJMT8
-#                 jp_name: ミニガスストーブ ZJDYDY
-#                 en_name: Mini Gas Stove
-#                 vn_name: BẾP GA MINI
-#                 jp_description: ステンレス鋼
-#                 image_url: https://m.media-amazon.com/images/I/61konudHIES._AC_SL1024_.jpg
-#                 product_type: ミニガスストーブ
-#                 price: 54729
-#       responses:
-#         "201":
-#           description: Created
-#         "400":
-#           description:  Bad Request
+  /product/drafts:
+    get:
+      summary: Get Drafts Products information
+      description: Logged in users can fetch only their own user information.
+      tags: [Product]
+      security:
+        - bearerAuth: []
+        - clientId: []
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
 
-#   /v1/product/delete:
-#     delete:
-#       summary: delete an Product
-#       description: Logged in users can delete an Product.
-#       tags: [Product]
-#       security:
-#         - bearerAuth: []
-#       requestBody:
-#         content:
-#           application/json:
-#             schema:
-#               type: object
-#               required:
-#                 - id
-#               properties:
-#                 id:
-#                   type: interger
-#               example:
-#                 id:  1
-#       responses:
-#         "200":
-#           description: Deleted
-#         "400":
-#           description:  Bad Request
+  /product/publisheds:
+    get:
+      summary: Get Drafts Products information
+      description: Logged in users can fetch only their own user information.
+      tags: [Product]
+      security:
+        - bearerAuth: []
+        - clientId: []
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
 
-#   /v1/product/delete/list:
-#     delete:
-#       summary: delete an Product
-#       description: Logged in users can delete an Product.
-#       tags: [Product]
-#       security:
-#         - bearerAuth: []
-#       requestBody:
-#         required: true
-#         content:
-#           application/json:
-#             schema:
-#               type: object
-#               properties:
-#                 ids:
-#                   type: array
-#                   items:
-#                     type: number
-#               example:
-#                 ids:  [1]
-#       responses:
-#         "200":
-#           description: Deleted
-#         "400":
-#           description:  Bad Request
 
-#   /v1/product/edit/{id}:
-#     put:
-#       summary: update an Product
-#       description: Logged in users can edit an Product.
-#       tags: [Product]
-#       security:
-#         - bearerAuth: []
-#       parameters:
-#         - in: path
-#           name: id
-#           schema:
-#             type: number
-#             example: 1
-#           required: false
-#           description: id items
-#       requestBody:
-#         content:
-#           application/json:
-#             schema:
-#               type: object
-#               properties:
-#                 jancode:
-#                   type: string
-#                 jp_name:
-#                   type: string
-#                 en_name:
-#                   type: string
-#                 vn_name:
-#                   type: string
-#                 jp_description:
-#                   type: string
-#                 country_code:
-#                   type: string
-#                 image_url:
-#                   type: string
-#                 link:
-#                   type: string
-#                 product_type:
-#                   type: string
-#                 price:
-#                   type: number
-#               example:
-#                 jancode:  B0B4SFJMT8
-#                 jp_name: ミニガスストーブ ZJDYDY
-#                 en_name: Mini Gas Stove
-#                 vn_name: BẾP GA MINI
-#                 jp_description: ステンレス鋼
-#                 image_url: https://m.media-amazon.com/images/I/61konudHIES._AC_SL1024_.jpg
-#                 product_type: ミニガスストーブ
-#                 price: 54729
-#       responses:
-#         "204":
-#           description: The Product was deleted successfully.
-#         "401":
-#           description: Authorization information is missing or invalid.
-#         "400":
-#           description:  Bad Request
-#         "404":
-#           description: A user with the specified ID was not found.
+  /product/publish/{id}:
+    put:
+      summary: update an Product
+      description: Logged in users can edit an Product.
+      tags: [Product]
+      security:
+        - bearerAuth: []
+        - clientId: []
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: string
+            example: string
+          required: false
+          description: id items
+      responses:
+        "204":
+          description: The Product was deleted successfully.
+        "401":
+          description: Authorization information is missing or invalid.
+        "400":
+          description:  Bad Request
+        "404":
+          description: A user with the specified ID was not found.
+  
+  #   /v1/product/delete:
+  #     delete:
+  #       summary: delete an Product
+  #       description: Logged in users can delete an Product.
+  #       tags: [Product]
+  #       security:
+  #         - bearerAuth: []
+  #       requestBody:
+  #         content:
+  #           application/json:
+  #             schema:
+  #               type: object
+  #               required:
+  #                 - id
+  #               properties:
+  #                 id:
+  #                   type: interger
+  #               example:
+  #                 id:  1
+  #       responses:
+  #         "200":
+  #           description: Deleted
+  #         "400":
+  #           description:  Bad Request
+
+  #   /v1/product/delete/list:
+  #     delete:
+  #       summary: delete an Product
+  #       description: Logged in users can delete an Product.
+  #       tags: [Product]
+  #       security:
+  #         - bearerAuth: []
+  #       requestBody:
+  #         required: true
+  #         content:
+  #           application/json:
+  #             schema:
+  #               type: object
+  #               properties:
+  #                 ids:
+  #                   type: array
+  #                   items:
+  #                     type: number
+  #               example:
+  #                 ids:  [1]
+  #       responses:
+  #         "200":
+  #           description: Deleted
+  #         "400":
+  #           description:  Bad Request
+
+
